js262/test/language/expressions/template-literal/invalid-unicode-escape-sequence-2.js


/*---
esid: sec-template-literal-lexical-components
description: Invalid unicode escape sequence
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

`\u0g`;
